src/test/run-pass/issues/issue-26641.rs
// run-pass
struct Parser<'a>(Box<FnMut(Parser) + 'a>);

fn main() {
    let _x = Parser(Box::new(|_|{}));
}
