src/test/compile-fail/param-by-value.rs
// error-pattern:can not pass a dynamically-sized type by value

fn f<T>(+_x: T) {}
fn main() {}
